# kadenamint

./: .gitignore  .hlint.yaml  LICENSE  README.md  build  bump-deps  default.nix  hoogle  kadenamint.cabal  release.nix  repl  repl.ghci  run  test  tmux  tutorial.md  watch
backend/: backend.cabal
backend/src/: Backend.hs
common/src/Common/: Route.hs
dep/: tendermint.nix
dep/hs-abci/: github.json
dep/kepler/: github.json
dep/kpkgs/: default.nix  git.json  github.json
dep/pact/: github.json
dep/which/: github.json
internal/: clean  repl  tmux
pact/: hello-world.pact
pact/coin-contract/: coin.pact  coin.repl  load-coin-contract.yaml
pact/coin-contract/v2/: coin.pact
src/: Kadenamint.hs
src-bin/: main.hs
src/Kadenamint/: ABCI.hs  Coin.hs  Common.hs  Pact.hs  Tendermint.hs
src/Kadenamint/Tendermint/: Config.hs  RPC.hs
src/System/: Which.hs
tests/: Tests.hs
tests-bin/: main.hs
