name: kadenamint
version: 0.1
cabal-version: >= 1.8
build-type: Simple
license: Apache-2.0

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: ansi-terminal
               , async
               , base
               , binary
               , colour
               , conduit-extra
               , data-default
               , file-embed
               , here
               , hs-abci-server
               , hs-abci-types
               , hs-abci-extra
               , http-types
               , lens
               , memory
               , mtl
               , pact
               , shelly
               , text
               , time
               , tomland
               , transformers
               , which
  exposed-modules:
    Kadenamint
    Kadenamint.Tendermint
    Kadenamint.Tendermint.Config
  ghc-options: -Wall

executable kadenamint
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , kadenamint
