name: kadenamint
version: 0.1
cabal-version: >= 1.8
build-type: Simple
license: Apache-2.0

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: aeson
               , ansi-terminal
               , async
               , base
               , base16-bytestring
               , binary
               , bytestring
               , colour
               , conduit-extra
               , data-default
               , file-embed
               , here
               , hs-abci-server
               , hs-abci-types
               , hs-abci-extra
               , hs-tendermint-client
               , http-types
               , lens
               , memory
               , mtl
               , network
               , network-uri
               , pact
               , shelly
               , text
               , time
               , tomland
               , transformers
               , unordered-containers
               , which
               , yaml

  exposed-modules:
    Kadenamint
    Kadenamint.ABCI
    Kadenamint.Common
    Kadenamint.Pact
    Kadenamint.Tendermint
    Kadenamint.Tendermint.Config
    Kadenamint.Tendermint.RPC

  ghc-options: -Wall

executable kadenamint
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , kadenamint
