name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: ansi-terminal
               , async
               , base
               , binary
               , colour
               , common
               , conduit-extra
               , frontend
               , hs-abci-server
               , hs-abci-types
               , hs-abci-extra
               , http-types
               , lens
               , mtl
               , obelisk-backend
               , obelisk-route
               , shelly
               , text
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
